@@ -1,3 +1,11 @@
+2002-02-16  James Henstridge  <james@daa.com.au>
+
+	* minefield.c (gtk_minefield_setup_numbers): set up the pango
+	layouts for the numbers.
+	(gtk_mine_draw): use gdk_draw_layout() to draw the mine text.
+
+	* minefield.h: use pango layouts for drawing the numbers.
+
 2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* gnomine.c (about): Don't try to translate empty string.
